# dummy_central

./: .gitignore  Cargo.toml  README.md  TODO.md  conftest.py  justfile  mkusers  requirements.txt  ruff.toml
.github/workflows/: checks.yml
github-types/: Cargo.toml  README.md
github-types/src/: branches.rs  git.rs  issues.rs  lib.rs  orgs.rs  pulls.rs  repos.rs  users.rs  utils.rs  webhooks.rs
src/: github.rs  main.rs  utils.rs
src/github/: graphql.rs  repos.rs
src/github/repos/: access.rs  git.rs  git_protocol.rs  issues.rs
src/github/repos/git/: create_tree.rs
src/model/: git.rs  mod.rs  model.sql  prs.rs  repos.rs  users.rs
tests/: README.md  __init__.py  conftest.py  test_any.py  test_repos.py  users.json
tests/collaborators/collaborators/: test_add_a_repository_collaborator.py
tests/git/: test_blobs.py  test_commits.py  test_refs.py
tests/git/blobs/: test_create_a_blob.py
tests/git/commits/: test_create_a_commit.py  test_get_a_commit.py
tests/git/refs/: test_create_a_reference.py  test_get_a_reference.py  test_update_a_reference.py
tests/git/trees/: test_create_a_tree.py  test_get_a_tree.py  test_submodules.py
tests/issues/: test_assignees.py  test_comments.py  test_create.py  test_pr.py
tests/pulls/: test_comments.py  test_reviews.py
tests/pulls/pulls/: __init__.py  test_create_a_pull_request.py  test_issue_references.py  test_labels.py
tests/rate-limit/: test_get_rate_limit_status_for_the_authenticated_user.py
tests/repos/contents/: test_contents_read.py  test_create_or_update_file_contents.py
tests/repos/forks/: test_create_a_fork.py
tests/repos/repos/: test_create_a_repository_for_the_authenticated_user.py  test_update_a_repository.py
tests/repos/rulesets/: test_rulesets.py
tests/webhooks/: test_webhooks.py
tests/webhooks/pull_request/: test_synchronize.py
