[package]
name = "dummy_central"
version = "0.1.0"
authors = ["Xavier Morel <xmo@odoo.com>"]
edition = "2021"

[profile.release]
overflow-checks = true
#debug = true
lto = "thin"

[workspace]

[dependencies]
axum = { version = "*", features = ["macros"] }
base64 = "*"
bytes = "*"
clap = { version = "*", features = ["derive"] }
flate2 = "*"
futures = "*"
gix-actor = "*"
gix-date = "*"
gix-diff = "*"
gix-features = "*"
gix-hash = "*"
gix-object = "*"
gix-pack = "*"
gix-traverse = "*"
github-types = { version = "*", path = "github-types" }
headers = "*"
hex = "*"
hmac = "*"
once_cell = "*"
parking_lot = "*"
percent-encoding = "*"
r2d2 = "*"
r2d2_sqlite = "*"
regex = "*"
reqwest = { version = "*", features = ["json", "multipart"] }
rusqlite = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sha-1 = "*"
sha2 = "*"
smallvec = "*"
tempfile = "*"
tokio = { version = "*", features = ["full"] }
tower = { version = "*", features = ["make"] }
tower-http = { version = "*", features = ["trace", "catch-panic", "set-header", "timeout"] }
tracing = "*"
tracing-futures = "*"
tracing-subscriber = "*"
